<resources>
    <string name="app_name">Pick And Roll</string>

    <!-- Games List -->
    <string name="distance_text">%s mi</string>
    <string name="participants_text">%s / %s</string>

    <!-- Game Page -->
    <string name="game_page_picture">Game Court Picture</string>
    <string name="competition_level_label">Competition Level</string>
    <string name="game_page_participants_label">Number of People</string>
    <string name="game_page_gender">Gender</string>
    <string name="game_page_distance_label">Distance</string>
    <string name="game_page_type">Type</string>
    <string name="game_page_game_length">Game Length</string>
    <string name="game_page_notes">Notes</string>
    <string name="title_activity_game_page">GamePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="game_page_claim_spot">Claim Spot</string>
</resources>