<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/gameImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/game_page_picture" />

    <TextView
        android:id="@+id/gamePageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/competitionLevelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/competition_level_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameImage"
        android:layout_marginStart="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/competitionLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Beginner"
        app:layout_constraintStart_toStartOf="@+id/competitionLevelLabel"
        app:layout_constraintTop_toBottomOf="@+id/competitionLevelLabel" />

    <TextView
        android:id="@+id/gamePageParticipantsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_page_participants_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/competitionLevelText"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/gamePageParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="7/10"
        app:layout_constraintStart_toStartOf="@+id/gamePageParticipantsLabel"
        app:layout_constraintTop_toBottomOf="@+id/gamePageParticipantsLabel" />

    <TextView
        android:id="@+id/gamePageGenderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_page_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamePageParticipants"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/gamePageGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Mixed"
        app:layout_constraintStart_toStartOf="@+id/gamePageGenderLabel"
        app:layout_constraintTop_toBottomOf="@+id/gamePageGenderLabel"/>

    <TextView
        android:id="@+id/gamePageDistanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_page_distance_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamePageGender"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/gamePageDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="2.8 mi"
        app:layout_constraintStart_toStartOf="@+id/gamePageDistanceLabel"
        app:layout_constraintTop_toBottomOf="@+id/gamePageDistanceLabel"/>

    <TextView
        android:id="@+id/gamePageTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_page_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamePageDistance"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/gamePageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Free play"
        app:layout_constraintStart_toStartOf="@+id/gamePageTypeLabel"
        app:layout_constraintTop_toBottomOf="@+id/gamePageTypeLabel" />

    <TextView
        android:id="@+id/gamePageLengthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_page_game_length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamePageType"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/gamePageLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="2 hours"
        app:layout_constraintStart_toStartOf="@+id/gamePageLengthLabel"
        app:layout_constraintTop_toBottomOf="@+id/gamePageLengthLabel"/>

    <TextView
        android:id="@+id/gamePageNotesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_page_notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamePageLength"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/gamePageNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="They only unlock one gate out of the three here."
        app:layout_constraintStart_toStartOf="@+id/gamePageNotesLabel"
        app:layout_constraintTop_toBottomOf="@+id/gamePageNotesLabel"/>

    <Button
        android:id="@+id/claimSpotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Claim Spot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>